fix(frontend) fix tabbar on small screens issue ref: #5507

--- a/frontend/src/component/TabBar/TabBar.styl
+++ b/frontend/src/component/TabBar/TabBar.styl
@@ -56,7 +56,7 @@ tabWidth = 160 // 160px
     .breadcrumbs
       display none
     .pageTitleGeneric
-      width "calc(100% - %s)" % (3*tabWidth)px
+      max-width "calc(100% - %s)" % (3*tabWidth)px
 
 @media (max-width: max-xs)
   .tabBar
